Добавил приложение excel_export, фоны и утилиту tree

--- a/employees/templates/employees/employee_detail.html
+++ b/employees/templates/employees/employee_detail.html
@@ -55,6 +55,10 @@
                        class="btn btn-outline-secondary" target="_blank">
                         <i class="bi bi-pencil me-1"></i>Редактировать
                     </a>
+                    <a href="{% url 'excel_export:export_excel' %}?model=equipment&employee={{ employee.id }}"
+                       class="btn btn-success">
+                        <i class="bi bi-file-earmark-excel me-1"></i>Экспорт в Excel
+                    </a>
                 </div>
             </div>
         </div>
