--- a/equipments/templates/equipments/import_export.html
+++ b/equipments/templates/equipments/import_export.html
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-header">
                 <h5 class="mb-0">
-                    <i class="bi bi-upload me-2"></i>Импорт оборудования из Excel
+                    <i class="bi bi-download me-2"></i>Импорт оборудования из Excel
                 </h5>
             </div>
             
@@ -44,7 +44,7 @@
                     
                     <div class="d-grid gap-2">
                         <button type="submit" class="btn btn-primary">
-                            <i class="bi bi-upload me-2"></i>Загрузить и импортировать
+                            <i class="bi bi-download me-2"></i>Загрузить и импортировать
                         </button>
                         <a href="{% url 'equipments:equipment_list' %}" class="btn btn-outline-secondary">
                             <i class="bi bi-arrow-left me-2"></i>Назад к списку
