--- a/equipments/templates/equipments/equipment_list.html
+++ b/equipments/templates/equipments/equipment_list.html
@@ -9,10 +9,6 @@
             <i class="bi bi-list-ul me-2"></i>Все оборудование
         </h5>
         <div>
-            <a href="{% url 'equipments:export_excel' %}?{{ request.GET.urlencode }}" 
-               class="btn btn-sm btn-success me-2" title="Экспорт оборудования в Excel">
-                <i class="bi bi-file-earmark-excel me-1"></i>Экспорт
-            </a>
             <a href="/admin/equipments/equipment/add/" class="btn btn-sm btn-primary" target="_blank">
                 <i class="bi bi-plus-circle me-1"></i>Добавить
             </a>
@@ -68,7 +64,7 @@
                     </div>
                     
                     <div class="col-md-3">
-                        <label class="form-label">Закреплено за отделом</label>
+                        <label class="form-label">Отдел</label>
                         <select name="assigned_department" class="form-select form-select-sm" onchange="this.form.submit()">
                             <option value="">Все отделы (закрепление)</option>
                             {% for department in departments %}
